# teachers-teammate

./: .bazelignore  .bazelrc  .gitignore  BUILD  CLAUDE.md  LICENSE  MODULE.bazel  NOTICE  README.md  README_wheel.md  pyproject.toml  requirements_dev_lock.txt  requirements_test_lock.txt  teachers-teammate.spec
.github/: copilot-instructions.md
.github/workflows/: build_artifacts.yml  build_wheel.yml  ci.yml  deploy_docs.yml  emergency-cleanup.yml  format_lint.yml  pull_request_checks.yml  release-dry-run.yml  release.yml  release_dry_run.yml  tests.yml
docs/: BUILD.bazel  advanced_user_guide.md  conf.py  deployment.md  development.md  index.md  testing.md  using_the_app.md
docs/_static/: plantuml.css  plantuml_click.js
docs/assets/: component_diagram.puml  deployment_diagram.puml  error_handling.puml  pipeline_overview.puml  pipeline_stages.puml  sequence_benchmark_compare.puml  sequence_gui_init.puml  sequence_open_folder.puml  sequence_run_documents.puml
docs/requirements/: BUILD  qualification_model.rsl  use_cases.trlc
teachers_teammate/: BUILD  __init__.py  __main__.py  _model_defaults.py  cli.py  cli_composition.py  config.py  exceptions.py  interfaces.py
teachers_teammate/application/: __init__.py  benchmark_service.py  commands.py  service.py
teachers_teammate/assets/: third_party_licenses.md
teachers_teammate/domain/: __init__.py  benchmark.py  freshness.py  stages.py
teachers_teammate/gui/: __init__.py  __main__.py  _addon_installer_dialog.py  _anonymizer_config_dialog.py  _app_bootstrap.py  _chart_widget.py  _collapsible_section.py  _config_panel.py  _constants.py  _dependency_guard_dialog.py  _downloads_dialog.py  _help_dialog.py  _image_utils.py  _log_widget.py  _main_window.py  _ocr_config_selector.py  _preview_panel.py  _qt_stream.py  _results_table.py  _settings_dialog.py  _stats_widget.py  _types.py  _update_check.py  _worker.py  composition.py
teachers_teammate/gui/benchmark/: __init__.py  __main__.py  _benchmark_window.py  _benchmark_worker.py  _compare_view.py  _runs_list.py  composition.py
teachers_teammate/infrastructure/: _llm_invoke.py  addon_manager.py  anonymizer.py  correction.py  docx_builder.py  evaluation.py  file_discovery.py  gpu_detector.py  image_preprocessor.py  input_provider_factory.py  input_providers.py  llm_factory.py  ocr_processor.py  ocr_text_cleaner.py  ollama_utils.py  pipeline.py  preview_image_store.py  reporting.py  stage_builder.py  state_repository.py  storage_root.py
teachers_teammate/infrastructure/benchmark/: __init__.py  run_store.py  runner.py
teachers_teammate/infrastructure/providers/: __init__.py  _helpers.py  anthropic.py  cohere.py  google.py  mistral.py  ollama.py  openai.py
teachers_teammate/infrastructure/workflow/: __init__.py  cache_service.py  coordinator.py  file_processor.py  ocr_service.py  preprocess_service.py
tests/: BUILD  conftest.py  pytest_main.py  run_test.py
tests/gui/: _gui_harness.py  test_benchmark_integration.py  test_benchmark_widgets.py  test_benchmark_window.py  test_benchmark_worker.py  test_gui_addon_installer_dialog.py  test_gui_anonymizer_dialog.py  test_gui_bootstrap.py  test_gui_config_panel.py  test_gui_lifecycle.py  test_gui_main_window.py  test_gui_results_table.py  test_gui_settings_dialog.py  test_gui_update_check.py  test_gui_widgets.py  test_gui_worker.py  test_ocr_config_selector.py
tests/integration/: test_pipeline_preview.py  test_pipeline_run.py  test_pipeline_scenarios.py  test_pipeline_tesseract.py  test_pipeline_txt.py
tests/unit/: test_addon_manager.py  test_anonymizer.py  test_benchmark_domain.py  test_benchmark_run_store.py  test_benchmark_runner.py  test_benchmark_service.py  test_cache_service.py  test_cli.py  test_cli_composition.py  test_config.py  test_coordinator.py  test_correction.py  test_docx_builder.py  test_domain_policy.py  test_evaluation.py  test_file_discovery.py  test_file_processor.py  test_gpu_detector.py  test_input_provider_factory.py  test_input_providers.py  test_interfaces.py  test_llm_factory.py  test_ocr_processor.py  test_ocr_stage_service.py  test_ocr_text_cleaner.py  test_ollama_utils.py  test_preprocess_service.py  test_preprocessor.py  test_preview_image_store.py  test_providers.py  test_release_stamp_versions.py  test_service.py  test_stage_builder.py  test_state_repository.py  test_storage_policy.py
third_party_licenses/: packages.csv  packages.md  third_party_license.txt
third_party_licenses/licenses/PySide6/: pyside6_qt_third_party.md
third_party_licenses/licenses/pyinstaller/: COPYING.txt
tools/: BUILD  extract_test_specs.py  pylint_findings.py
tools/packaging/: THIRD_PARTY_NOTICES.md  make_deb.sh  make_dmg.sh  make_icns.sh  make_ico.py  windows.nsi
tools/release/: BUILD  __init__.py  extract_wheel_requires.py  license_overrides.toml  stamp_versions.py  update_licenses.py  update_licenses.sh
tools/sphinx/: BUILD
